# fab-lite

./: .env.example  .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4d85c6a365e3_create_tasks_table.py  6e08bfa50a07_create_chat_sessions_table.py  e48ea200d2a7_create_chat_sessions_table_with_timezone.py
app/: config.py  database.py  main.py
app/agent/: graph.py  nodes.py  state.py  tools.py
app/api/: chat.py  chat_utils.py  tasks.py
app/core/: cost_guard.py  lock.py  telemetry.py
app/models/: __init__.py  chat.py  task.py
app/scheduler/: runner.py
app/schemas/: chat.py  task.py
app/tests/: conftest.py  test_agent_graph.py  test_agent_tools.py  test_cost_guard.py  test_lock.py  test_scheduler.py  test_tasks.py  test_telemetry.py
