[project]
name = "fabrix-lite"
version = "0.2.0"
description = "FabriX Lite - LangGraph-based task management agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.3.1",
    "langchain-core>=0.3.30",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.3.3",
    "redis>=5.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "fakeredis>=2.0.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
]
